# clearcut

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
clearcut/: __init__.py  audio.py  batch.py  captions.py  cli.py  color.py  compositor.py  crop.py  dryrun.py  effects.py  encoder.py  exceptions.py  format.py  gpu.py  intro.py  llm.py  logging.py  merger.py  metadata.py  models.py  pipeline.py  plugins.py  preview.py  progress.py  remote.py  repurpose.py  scenes.py  silence.py  social.py  styles.py  transitions.py  utils.py
clearcut/presets/: bold.yaml  cinematic.yaml  clean.yaml  tiktok.yaml
clearcut/web/: app.py
demos/: gen_fix.py  generate_demo_suite.py  run_all.py  run_all.sh  run_demo_suite.py  run_each.py
demos/output/: demo6_dissolve.mkv  demo6_fade.mkv  demo6_radial.mkv  demo6_slideleft.mkv
docs/: cli-reference.md  configuration.md  faq.md  index.md  installation.md  pipeline-stages.md  quickstart.md  remote-gpu.md  templates.md
scripts/: demo_pipeline.py
site/: 404.html  index.html  sitemap.xml
site/cli-reference/: index.html
site/configuration/: index.html
site/faq/: index.html
site/installation/: index.html
site/pipeline-stages/: index.html
site/quickstart/: index.html
site/remote-gpu/: index.html
site/search/: search_index.json
site/templates/: index.html
tests/: conftest.py  test_audio.py  test_batch.py  test_captions.py  test_cli.py  test_color.py  test_crop.py  test_effects.py  test_format.py  test_integration.py  test_intro.py  test_merger.py  test_models.py  test_progress.py  test_ramping.py  test_reliability.py  test_repurpose.py  test_scenes.py  test_silence.py  test_styles.py  test_transitions.py  test_utils.py
