[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearcut"
version = "0.1.0"
description = "Raw footage to publish-ready video. One command."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Salim" }]
dependencies = [
    "typer>=0.12",
    "moviepy>=2.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "ffmpeg-python>=0.2",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
clearcut = "clearcut.cli:app"

[project.optional-dependencies]
captions = ["whisperx"]
silence = ["silero-vad", "torch", "torchaudio"]
scenes = ["scenedetect[opencv]"]
all = ["clearcut[captions,silence,scenes]"]

[tool.hatch.build.targets.wheel]
packages = ["clearcut"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
