[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearcut"
version = "0.1.0"
description = "Raw footage to publish-ready video. One command."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Salim" }]
keywords = ["video", "editing", "ffmpeg", "pipeline", "automation", "content-creation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.12",
    "moviepy>=2.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "ffmpeg-python>=0.2",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/salimhs/clearcut"
Repository = "https://github.com/salimhs/clearcut"
Issues = "https://github.com/salimhs/clearcut/issues"

[project.scripts]
clearcut = "clearcut.cli:app"

[project.optional-dependencies]
captions = ["whisperx"]
silence = ["torch", "torchaudio"]
scenes = ["scenedetect[opencv]"]
all = ["clearcut[captions,silence,scenes]"]
dev = ["ruff", "mypy", "pre-commit"]
docs = ["mkdocs", "mkdocs-material"]
web = ["gradio"]
test = ["pytest", "pytest-cov", "pytest-mock"]

[tool.hatch.build.targets.wheel]
packages = ["clearcut"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["demos", "scripts"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.coverage.run]
source = ["clearcut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
